add jobsbar and html change
add jobsbar and html change

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!--引入百度地图的jssdk，这里需要使用你在百度地图开发者平台申请的 ak-->
     <script type="text/javascript" src="https://api.map.baidu.com/getscript?v=3.0&ak=NmMSjG5Zar0nfp5TGG9DCTSOLQ0ATmSH"></script>
   </head>
-  <body style="height: 100%;width: 100%">
-    <div id="app"></div>
+  <body style="height: 100%;width: 100%;">
+    <div id="app" style="height: 100%;width: 100%;"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
